#227: fixed list when too big

--- a/console/org.linkedin.glu.console-webapp/web-app/css/main-glu.css
+++ b/console/org.linkedin.glu.console-webapp/web-app/css/main-glu.css
@@ -39,6 +39,11 @@ body {
   text-shadow: none;
 }
 
+.navbar-fixed-top .dropdown-menu {
+  max-height: 20em;
+  overflow-y: auto;
+}
+
 .container {
   width: 99%;
 }
